[package]
name = "db-rs"
version = "0.1.0"
edition = "2021"
author = "parth"
description = "fast, embedded, transactional, key value store"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"