[package]
name = "db-rs"
version = "0.3.2"
edition = "2021"
description = "fast, embedded, transactional, key value store"
license = "BSD-3-Clause"
readme = "../README.md"

[features]
clone = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
fs2 = "0.4.3"

[dev-dependencies]
db-rs-derive = { path = "../derive" }
